kubernetes-course-on-youtube/mongo-express-with-ingress/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  # namespace: kubernetes-dashboard
spec:
  defaultBackend:
    service:
      name: mongo-express
      port:
        number: 8081
  # rules:
  # - host: mongo-express.local
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: mongo-express
  #           port:
  #             number: 8081


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minimal-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /testpath
#         pathType: Prefix
#         backend:
#           service:
#             name: test
#             port:
#               number: 80
